force-app/main/default/objects/Penny_Career_Review__c/Penny_Career_Review__c.object-meta.xml
<CustomObject>
    <label>Penny Career Review</label>
    <nameField>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Penny Career Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Career Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>