force-app/main/default/objects/Penny_Career_Review__c/fields/Area_Scores__c.field-meta.xml
<CustomField>
    <fullName>Area_Scores__c</fullName>
    <label>Area Scores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>