force-app/main/default/objects/Penny_Career_Review__c/fields/Feedback_JSON__c.field-meta.xml
<CustomField>
    <fullName>Feedback_JSON__c</fullName>
    <label>Feedback JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>