force-app/main/default/objects/Penny_Career_Review__c/fields/Readiness_Label__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Label__c</fullName>
    <label>Readiness Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>