force-app/main/default/objects/Penny_Career_Review__c/fields/Review_Mode__c.field-meta.xml
<CustomField>
    <fullName>Review_Mode__c</fullName>
    <label>Review Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>