force-app/main/default/objects/Penny_Career_Review__c/fields/Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At__c</fullName>
    <label>Reviewed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>