force-app/main/default/objects/Penny_Career_Review__c/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <label>Target Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>